# kielip

./: .gitignore  Cargo.toml  cargo_release.sh  make_appimage.sh  make_appimage_desktop_file.sh  make_appimage_icons.sh  make_deb.sh  make_deb_icons.sh  readme.md
src/: config.rs  lib.rs  main.rs  ringbuffer.rs
