[package]
name = "kielip"
version = "0.1.0"
authors = ["Kaiyin Zhong <kindlychung@gmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
instant = "0.1.9"
x11-clipboard = "0.5.1"
ron = "0.6.4"
serde = { version = "1.0.118", features = ["derive"] }
once_cell = "1.5.2"
regex = "1.4.2"
rand = "0.8.0"
xshell = "0.1.8"
